# pdk

./: README.md  pyproject.toml
src/pdk/: __init__.py  cli.py  exceptions.py  logger.py
src/pdk/agent/: __init__.py  completer.py  config.py  metadata.py  prompt.py  templater.py  tester.py
src/pdk/models/: __init__.py  api_client.py
src/pdk/models/anthropic/: __init__.py  client.py  exceptions.py
src/pdk/models/openai/: __init__.py  client.py  exceptions.py
